examples/test/testpolicy15343.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15343
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key41: value12
      key0: value11
      key34: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value13
          key12: value47
          key44: value41
